# Digimon-Card-Game

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
digimon_card_game/assertions/: __init__.py  assertions.py
digimon_card_game/banlists/: __init__.py  banlist.py
digimon_card_game/cards/: __init__.py  card_type.py  digi_egg_card.py  digimon_card.py  option_card.py  seeder.py  tamer_card.py
digimon_card_game/cards/information/: __init__.py  card_color.py  card_rarity.py  digimon_attribute.py  digimon_form.py  digimon_type.py
digimon_card_game/decks/: __init__.py  deck.py  deckset.py
digimon_card_game/duels/: __init__.py  duelist.py
digimon_card_game/extensions/attrs/validators/: __init__.py  validators.py
digimon_card_game/seeders/: banlist_seeder.py  card_seeder.py
digimon_card_game/src/cards/: __init__.py  card_type.py  digi_egg_card.py  digimon_card.py  option_card.py  seeder.py  tamer_card.py
digimon_card_game/src/cards/information/: __init__.py  card_rarity.py
digimon_card_game/src/decks/: deck.py  deckset.py
digimon_card_game/src/duels/: duelist.py
digimon_card_game/tests/: test_card_color.py  test_card_rarity.py  test_deck.py  test_deckset.py  test_digi_egg_card.py  test_digimon_attribute.py  test_digimon_card.py  test_digimon_form.py  test_digimon_type.py  test_duelist.py  test_option_card.py  test_tamer_card.py
digimon_card_game/tests/assertions/attributes/: assertions.py
digimon_card_game/tests/assertions/list/: assertions.py
docs/: README.md
src/cards/: cards.py
src/digimon_card_game/: __init__.py  card_color.py  card_rarity.py  card_type.py  deck.py  deckset.py  digi_egg_card.py  digimon_attribute.py  digimon_card.py  digimon_form.py  digimon_type.py  option_card.py  tamer_card.py
src/duels/: duelist.py
src/extensions/attrs/validators/: __init__.py
src/validators/: __init__.py  validators.py
tests/: test_banlist.py  test_banlist_seeder.py  test_card_color.py  test_card_rarity.py  test_deck.py  test_deckset.py  test_digi_egg_card.py  test_digimon_attribute.py  test_digimon_card.py  test_digimon_form.py  test_digimon_type.py  test_duelist.py  test_option_card.py  test_tamer_card.py
tests/assertions/: __init__.py  assertions.py  attributes.py  dictionary.py  enum.py  list.py  number.py
tests/assertions/attributes/: assertions.py
tests/assertions/dictionary/: assertions.py
tests/assertions/enum/: assertions.py
tests/assertions/list/: assertions.py
tests/assertions/number/: assertions.py
