[tool.poetry]
name = "digimon-card-game"
version = "0.1.0"
description = ""
authors = ["ezeBalsamo <alexander.ezequiel.balsamo@gmail.com>"]
readme = "README.md"
packages = [{include = "digimon_card_game"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
